# GradientDescentSolver

./: .gitmodules  CMakeLists.txt  README.md
include/: gradient_descent_solver.h
scripts/: test_plot_01.sh  test_plot_02.sh  test_plot_03.sh  test_plot_04.sh  trajectory_convex.py  trajectory_nonconvex.py  trajectory_strongconvex.py  visualize_convex.py  visualize_nonconvex.py  visualize_strongconvex.py
src/: 01_nonconvex.cpp  02_convex.cpp  03_strongconvex.cpp  04_convex_with_acceleration.cpp  test01.cpp
